// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Should Render AnsweredQuestions component should render correctly 1`] = `
<div>
  <style__BlueText>
    | 457 answered questions
  </style__BlueText>
</div>
`;

exports[`Components Should Render App component should render correctly onto the page 1`] = `
<div>
  <div>
    <strong>
      BAD REQUEST - INVALID URL
    </strong>
  </div>
  <br />
  <div>
    HTTP ERROR 400. The request URL is invalid
  </div>
</div>
`;

exports[`Components Should Render ColorOption component should render correctly 1`] = `<div />`;

exports[`Components Should Render ConfigurationOption component should render correctly 1`] = `<style__ConfigBox />`;

exports[`Components Should Render DescriptionPoint component should render correctly 1`] = `
<li>
  <style__DesPoint />
</li>
`;

exports[`Components Should Render ItemHeading component should render correctly 1`] = `
<div>
  <style__TitleText>
     | 
  </style__TitleText>
  <style__BlueText>
    <u>
      Brand: 
    </u>
  </style__BlueText>
</div>
`;

exports[`Components Should Render ItemPriceDetails component should render correctly 1`] = `
<div>
  <style__PriceText>
    List Price: 
  </style__PriceText>
   
  <style__ListPriceText>
    $
    NaN
  </style__ListPriceText>
  <br />
  <style__PriceText>
    With Deal:
  </style__PriceText>
   
  <style__WithDealPriceText>
    $
  </style__WithDealPriceText>
    Prime Free Delivery
  <br />
  <style__PriceText>
    You Save:
  </style__PriceText>
   
  <style__PriceSavedText>
    $
    10.00
     (
    NaN
    %) 
  </style__PriceSavedText>
  <div>
    Order it now
  </div>
  <br />
  <br />
  <div>
    FREE Delivery 
    <b>
      Feb 11th
       - 
      Feb 16th
    </b>
     for Prime members
  </div>
  <style__BlueText>
    Details
  </style__BlueText>
  <br />
  <div>
    Ships from and sold by 
    .com Services LLC.
  </div>
</div>
`;

exports[`Components Should Render Rating component should render correctly 1`] = `
<div>
  <style__RatingBox>
    <div>
      <span
        data-for="test"
        data-tip={true}
      >
        <StarRatings
          changeRating={null}
          gradientPathName=""
          ignoreInlineStyles={false}
          numberOfStars={5}
          rating={5}
          starDimension="15px"
          starEmptyColor="white"
          starHoverColor="rgb(230, 67, 47)"
          starRatedColor="orange"
          starSpacing="1px"
          svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
          svgIconViewBox="0 0 51 48"
          typeOfWidget="Star"
        />
      </span>
      <ReactTooltip
        backgroundColor="white"
        border={true}
        borderColor="black"
        clickable={false}
        effect="solid"
        id="test"
        insecure={true}
        multiline={true}
        place="bottom"
        resizeHide={true}
        textColor="black"
        wrapper="div"
      >
        <div>
          <StarRatings
            changeRating={null}
            gradientPathName=""
            ignoreInlineStyles={false}
            numberOfStars={5}
            rating={5}
            starDimension="15px"
            starEmptyColor="white"
            starHoverColor="rgb(230, 67, 47)"
            starRatedColor="orange"
            starSpacing="1px"
            svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
            svgIconViewBox="0 0 51 48"
            typeOfWidget="Star"
          />
          4.7 out of 5
          <br />
          12347 global rating
        </div>
        <Chart
          test="Hello"
        />
      </ReactTooltip>
    </div>
    <style__RatingText>
       12347 ratings 
    </style__RatingText>
  </style__RatingBox>
  <style__ClimatePledgeFriendlyText>
    <img
      src="https://freedesignfile.com/upload/2016/06/Globe-with-tree-logos-vector-design-02.jpg"
      style={
        Object {
          "height": "22px",
          "width": "22px",
        }
      }
    />
    Climate Pledge Friendly
  </style__ClimatePledgeFriendlyText>
  <style__BlueText>
    Audio Speakers
  </style__BlueText>
</div>
`;
